[package]
name = "luau-compile"
version = "0.1.0"
edition = "2021"

[features]
default = []
shuttle = ["dep:shuttle-axum", "dep:shuttle-runtime"]

[dependencies]
axum = { version = "0.7.9", features = ["json"] }
tokio = { version = "1.42.0", features = ["rt", "rt-multi-thread"] }
mlua = { version = "0.10.2", features = ["luau"] }
serde = { version = "1.0", features = ["derive"] }
shuttle-axum = { version = "0.49.0", optional = true }
shuttle-runtime = { version = "0.49.0", optional = true }
